recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: not found: value color
setColor(color.Orange)
         ^